<resources>

    <string name="app_name">我要花</string>
    <string name="canncel">取消</string>
    <string name="confirm">确定</string>

    <string name="tab_home">首页</string>
    <string name="tab_category">分类</string>
    <string name="tab_order">进货单</string>
    <string name="tab_personal">我</string>

    <string name="title_personal">我的</string>
    <string name="title_register">注册</string>
    <string name="title_login">登录</string>
    <string name="title_order_list">进货单</string>
    <string name="title_collect">我的收藏</string>
    <string name="title_florists">花艺师详情</string>
    <string name="title_user_address_manage">管理收货地址</string>
    <string name="title_add_user_address">新增收货地址</string>
    <string name="title_personalinfo">个人信息</string>
    <string name="title_setting">系统设置</string>
    <string name="title_forgetpassword">忘记密码</string>
    <string name="title_updatepassword">修改密码</string>
    <string name="title_user_order">我的订单</string>

    <string name="hint_input_commodity_name">请输入商品名称</string>
    <string name="hint_input_receve_name">请输入收货人姓名</string>
    <string name="hint_input_receve_mobile">请输入收货人电话号码</string>
    <string name="hint_input_receve_provinces">请输入省市区地址</string>
    <string name="hint_input_receve_street">请输入详细地址</string>
    <string name="hint_input_user_account">请输入账号</string>
    <string name="hint_input_user_password">请输入密码</string>
    <string name="hint_input_user_confirm_password">请再次输入密码</string>
    <string name="hint_input_user_nick">请输入昵称</string>
    <string name="hint_input_user_mobile">请输入手机号码</string>
    <string name="hint_input_user_address">请输入您的联系地址</string>

    <string name="text_user_collect_commodity">我的收藏商品</string>
    <string name="text_user_collect_shop">我的收藏店铺</string>
    <string name="text_user_order">订单</string>
    <string name="text_personal_order">进货单</string>
    <string name="text_personal_sell_order">销售订单</string>
    <string name="text_personal_buy">一键下单</string>
    <string name="text_personal_order_return">异常退货管理</string>
    <string name="text_personal_pay_money">应付账款</string>
    <string name="text_personal_message">消息中心</string>
    <string name="text_home_master_shop_slogan">新鲜,活力就是我们的宗旨</string>
    <string name="text_home_celebrity_shop_slogan">我们把最受欢迎的花花大师推荐给你</string>
    <string name="text_home_gifts_shop_slogan">带着泥土芬香,他们在路上</string>

    <string name="btn_order_packing">装箱单</string>
    <string name="btn_order_return">退货申请</string>
    <string name="btn_order_pay">去付款</string>
    <string name="btn_logout">退出账号</string>
    <string name="btn_comfirm">确认</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登录</string>
    <string name="rb_user">终端用户</string>
    <string name="rb_shop">花店</string>
    <string name="rb_wholesaler">批发商</string>
    <string name="rb_manufacturer">生产商</string>
    <string name="seller_sold_num">已售:%1$s扎</string>

    <string name="exit_main">再次点击，退出应用</string>

    <string-array name="pop_msg">
        <item>消息</item>
        <item>首页</item>
        <item>收藏</item>
        <item>分享</item>
        <item>店铺介绍</item>
        <item>联系卖家</item>
    </string-array>

</resources>
