<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/B2B2B2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_tab_home"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/tab_home"
                android:textColor="@color/text_color_tab"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_tab_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_tab_category"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/tab_category"
                android:textColor="@color/text_color_tab"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_tab_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_tab_order"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/tab_order"
                android:textColor="@color/text_color_tab"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/text_tab_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/selector_tab_personal"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/tab_personal"
                android:textColor="@color/text_color_tab"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>