<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_for_login"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color_666666"
            android:text=" 账        号"/>

        <EditText
            android:id="@+id/input_user_account"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/DADADA"
            android:textColor="@color/color_666666"
            android:textSize="14sp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:text="yj"
            android:hint="@string/hint_input_user_account"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/bg_for_login"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color_666666"
            android:text=" 密        码"/>

        <EditText
            android:id="@+id/input_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/DADADA"
            android:textColor="@color/color_666666"
            android:textSize="14sp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_user_password"
            android:text="123456"
            android:background="@null"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_add_user_address"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/btn_login"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/color_666666"
            android:text="注册"/>

        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textSize="14sp"
            android:textColor="@color/color_666666"
            android:text="忘记密码"/>

    </RelativeLayout>

</LinearLayout>